plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.chunbaetour'
version = '0.0.1-SNAPSHOT'
description = 'chunbae-tour team project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// Micrometer Prometheus registry — /actuator/prometheus endpoint 노출 (KAN-104).
	// Spring Boot가 버전 관리. 인증 필터/서비스에 Counter/Timer 추가 시 자동 수집.
	implementation 'io.micrometer:micrometer-registry-prometheus'
	// 보안 감사 로그 JSON 인코더 (KAN-105). audit.security logger를 logstash JSON format으로 출력.
	// 외부 log aggregator(ELK/CloudWatch Logs)가 별도 인덱스로 수집 가능. Spring Boot 4 호환 7.x 사용.
	implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.apache.httpcomponents.client5:httpclient5'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// QueryDSL — OpenFeign 유지보수 fork 사용
	// - com.querydsl는 5.1.0에서 유지보수 중단, CVE-2024-49203 미패치
	// - io.github.openfeign.querydsl 5.6.1: CVE 패치
	// - querydsl-jpa는 :jakarta classifier 필요 (기본 jar는 여전히 javax.persistence 참조).
	//   classifier 없이 사용하면 JPAQueryFactory 생성자 시그니처에서 EntityManager 클래스를 못 찾아 컴파일 실패.
	implementation 'io.github.openfeign.querydsl:querydsl-jpa:5.6.1:jakarta'
	annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:5.6.1:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.redisson:redisson:3.35.0'

	// Security + JWT (S2~S5에서 본격 사용, S1에서는 BCryptPasswordEncoder + SecurityConfig 최소 구성)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
	testImplementation 'org.testcontainers:mysql:1.20.4'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}
